--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit backupGlobals="false"
-		 backupStaticAttributes="false"
-		 bootstrap="vendor/autoload.php"
-		 colors="true"
-		 convertErrorsToExceptions="true"
-		 convertNoticesToExceptions="true"
-		 convertWarningsToExceptions="true"
-		 processIsolation="false"
-		 strict="true">
-	<testsuites>
-		<testsuite name="ContaoCommunityAllianceBuildSystemRepositoryGitTestSuite">
-			<directory suffix="Test.php">test/</directory>
-		</testsuite>
-	</testsuites>
+         backupStaticAttributes="false"
+         bootstrap="vendor/autoload.php"
+         colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         strict="true">
+    <testsuites>
+        <testsuite name="GitPhp Test Suite">
+            <directory suffix="Test.php">test/</directory>
+        </testsuite>
+    </testsuites>
 </phpunit>
