--- a/build.default.properties
+++ b/build.default.properties
@@ -7,3 +7,5 @@
 
 phpcs.standard=${basedir}/vendor/phpcq/coding-standard/phpcs/PhpCodeQuality/ruleset.xml
 phpmd.ruleset=${basedir}/vendor/phpcq/coding-standard/phpmd/ruleset.xml
+
+phpcpd.excluded=Command
