--- a/.check-author.yml
+++ b/.check-author.yml
@@ -1,2 +1,3 @@
 mapping:
   Tristan Lins <tristan@lins.io>: Tristan Lins <tristan.lins@bit3.de>
+  David Molineus <david.molineus@netzmacht.de>: David Molineus <mail@netzmacht.de>
