--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
 language: php
+
 php:
-    - "5.3"
-    - "5.4"
-    - "5.5"
-    - "5.6"
+    - 5.3
+    - 5.4
+    - 5.5
+    - 5.6
+
+sudo: false
 
 install:
-    - composer install --prefer-dist --dev
+    - travis_retry composer self-update && composer --version
+    - travis_retry composer update --prefer-dist --dev --no-interaction
 
 script: ant -keep-going
+
+# Hack to make things work again - we can not use a shallow repository.
+git:
+  depth: 2147483647
