--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3",
-        "symfony/process": "~2.3"
+        "symfony/process": "~2.3 | ~3.0"
     },
     "require-dev": {
         "monolog/monolog": "~1.0",
-        "symfony/filesystem": "~2.3",
+        "symfony/filesystem": "~2.3 | ~3.0",
         "phpcq/all-tasks": "~1.1"
     },
     "autoload": {
