added git pull option

--- a/.check-author.yml
+++ b/.check-author.yml
@@ -1,3 +1,4 @@
 mapping:
   Tristan Lins <tristan@lins.io>: Tristan Lins <tristan.lins@bit3.de>
   David Molineus <david.molineus@netzmacht.de>: David Molineus <mail@netzmacht.de>
+  Ahmad Marzouq <ahmad.marzouq@eagles-web.com>: ahmad-marzouq <mahamed_999@yahoo.com>
