--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
     "description": "Easy to use GIT wrapper for PHP.",
     "license": "MIT",
     "require": {
-        "php": ">=5.3",
-        "psr/log": "~1.0",
-        "symfony/process": "~2.3 | ~3.0"
+        "php": "^5.6 || ^7.0",
+        "psr/log": "^1.0",
+        "symfony/process": "^3.4 || ^4.0"
     },
     "require-dev": {
-        "symfony/filesystem": "~2.3 | ~3.0",
-        "phpcq/all-tasks": "~1.1"
+        "symfony/filesystem": "^3.4 || ^4.0",
+        "phpcq/all-tasks": "^1.1"
     },
     "autoload": {
         "psr-4": {
