--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.5.x-dev",
-            "dev-develop": "1.6.x-dev"
+            "dev-release/1.5.1": "1.5.1-dev"
         }
     }
 }
