--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "psr/log": "^1.0",
-        "symfony/process": "^3.4 || ^4.0"
+        "symfony/process": "^3.4 || ^4.0 || ^5.0"
     },
     "require-dev": {
-        "symfony/filesystem": "^3.4 || ^4.0",
+        "symfony/filesystem": "^3.4 || ^4.0 || ^5.0",
         "phpcq/all-tasks": "^1.1"
     },
     "autoload": {
