--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     },
     "require-dev": {
         "symfony/filesystem": "^3.4 || ^4.0 || ^5.0",
-        "phpcq/all-tasks": "^1.1",
-        "phpunit/phpunit": "^5.0 || ^6.0 || ^7.0"
+        "symfony/filesystem": "^4.0 || ^5.0",
+        "phpcq/runner-bootstrap": "^1.0@dev"
     },
     "autoload": {
         "psr-4": {
