--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,32 @@
 {
-    "name": "bit3/git-php",
-    "description": "Easy to use GIT wrapper for PHP.",
-    "license": "MIT",
-    "require": {
-        "php": "^5.6 || ^7.0",
-        "psr/log": "^1.0",
-        "symfony/process": "^3.4 || ^4.0 || ^5.0"
-    },
-    "require-dev": {
-        "symfony/filesystem": "^3.4 || ^4.0 || ^5.0",
-        "symfony/filesystem": "^4.0 || ^5.0",
-        "phpcq/runner-bootstrap": "^1.0@dev"
-    },
-    "autoload": {
-        "psr-4": {
-            "Bit3\\GitPhp\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Bit3\\GitPhp\\Test\\": "tests"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-release/1.6.0": "1.6.0-dev"
-        }
+  "name": "bit3/git-php",
+  "description": "Easy to use GIT wrapper for PHP.",
+  "license": "MIT",
+  "require": {
+    "php": "^5.6 || ^7.0",
+    "psr/log": "^1.0",
+    "symfony/process": "^3.4 || ^4.0 || ^5.0"
+  },
+  "require-dev": {
+    "symfony/filesystem": "^4.0 || ^5.0",
+    "phpcq/runner-bootstrap": "^1.0@dev"
+  },
+  "autoload": {
+    "psr-4": {
+      "Bit3\\GitPhp\\": "src"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Bit3\\GitPhp\\Test\\": "tests"
+    }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-release/1.6.0": "1.6.0-dev"
+    }
+  }
 }
