--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
   "description": "Easy to use GIT wrapper for PHP.",
   "license": "MIT",
   "require": {
-    "php": "^5.6 || ^7.0",
-    "psr/log": "^1.0",
-    "symfony/process": "^3.4 || ^4.0 || ^5.0"
+    "php": "^7.4 || ^8.0",
+    "psr/log": "^1.0 || ^2.0 || ^3.0",
+    "symfony/process": "^4.0 || ^5.0 || ^6.0"
   },
   "require-dev": {
-    "symfony/filesystem": "^4.0 || ^5.0",
-    "phpcq/runner-bootstrap": "^1.0@dev"
+    "phpcq/runner-bootstrap": "^1.0@dev",
+    "symfony/filesystem": "^4.0 || ^5.0 || ^6.0"
   },
   "autoload": {
     "psr-4": {
