--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
             "Bit3\\GitPhp\\": "src",
             "Bit3\\GitPhp\\Test\\": "tests"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.5.x-dev",
+            "dev-develop": "1.6.x-dev"
+        }
     }
 }
